[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://Character/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 62 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource( 2 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 0, -62 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -62 )
shape = SubResource( 1 )

[node name="ProjectileSpawnLocation" type="Position2D" parent="."]
position = Vector2( -32, -92 )

[node name="ShootingTimer" type="Timer" parent="."]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]
